@@ -21,6 +21,10 @@
 | | Description | PR
 
 | 🧽
+| Allow configuration sink prefixes
+| https://github.com/knative/client/pull/571[#571]
+
+| 🧽
 | Support multiple revisions on `kn revision delete`
 | https://github.com/knative/client/pull/657[#657]
 
